fix: change on spacing

--- a/css/login.css
+++ b/css/login.css
@@ -13,7 +13,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 20px;
+    padding: 60px 20px;
 }
 
 .login-content {
